feat: Add bug reporting, database lock detection, and UI improvements
- Add bug report button in Settings (email to benariet@bgu.ac.il)
- Detect and log database lock timeouts to app_logs
- Validate open sessions before opening QR scanner
- Truncate long manual attendance reasons (200 char limit)
- Lock all activities to portrait orientation

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -185,6 +185,7 @@
     <string name="network_error_generic">Unable to connect. Check your internet and try again.</string>
     <string name="about">About</string>
     <string name="version">Version %s</string>
+    <string name="report_bug_or_problems">Report a bug or having problems?</string>
 
     <!-- Presenter Home (revamped) -->
     <string name="presenter_home_welcome_default">Welcome, Presenter!</string>
